add shuffling for retry, support java 9